force-app/main/default/objects/Pedidos_posicionesSet__x/Pedidos_posicionesSet__x.object-meta.xml
<CustomObject>
    <externalDataSource>SAP</externalDataSource>
    <externalName>Pedidos_posicionesSet</externalName>
    <label>Pedidos_posicionesSet</label>
    <pluralLabel>Pedidos_posicionesSet</pluralLabel>
</CustomObject>