force-app/main/default/objects/Pedidos_posicionesSet__x/fields/Fecha_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Entrega__c</fullName>
    <description>Fecha_Entrega</description>
    <externalDeveloperName>Fecha_Entrega</externalDeveloperName>
    <label>Fecha_Entrega</label>
    <type>DateTime</type>
</CustomField>