force-app/main/default/objects/Pedidos_posicionesSet__x/fields/Finishing__c.field-meta.xml
<CustomField>
    <fullName>Finishing__c</fullName>
    <description>Finishing</description>
    <externalDeveloperName>Finishing</externalDeveloperName>
    <label>Finishing</label>
    <length>3</length>
    <type>Text</type>
</CustomField>