force-app/main/default/objects/Pedidos_posicionesSet__x/fields/Gcurr__c.field-meta.xml
<CustomField>
    <fullName>Gcurr__c</fullName>
    <description>Gcurr</description>
    <externalDeveloperName>Gcurr</externalDeveloperName>
    <label>Gcurr</label>
    <length>5</length>
    <type>Text</type>
</CustomField>