force-app/main/default/objects/Pedidos_posicionesSet__x/fields/Gnet__c.field-meta.xml
<CustomField>
    <fullName>Gnet__c</fullName>
    <description>Gnet</description>
    <externalDeveloperName>Gnet</externalDeveloperName>
    <label>Gnet</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>