force-app/main/default/objects/Pedidos_posicionesSet__x/fields/Gtax__c.field-meta.xml
<CustomField>
    <fullName>Gtax__c</fullName>
    <description>Gtax</description>
    <externalDeveloperName>Gtax</externalDeveloperName>
    <label>Gtax</label>
    <precision>14</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>