force-app/main/default/objects/Pedidos_posicionesSet__x/fields/Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy__c</fullName>
    <description>Hierarchy</description>
    <externalDeveloperName>Hierarchy</externalDeveloperName>
    <label>Hierarchy</label>
    <length>18</length>
    <type>Text</type>
</CustomField>