force-app/main/default/objects/Pedidos_posicionesSet__x/fields/kmein__c.field-meta.xml
<CustomField>
    <fullName>kmein__c</fullName>
    <description>kmein</description>
    <externalDeveloperName>kmein</externalDeveloperName>
    <label>Kmein</label>
    <length>3</length>
    <type>Text</type>
</CustomField>