force-app/main/default/objects/Pedidos_posicionesSet__x/fields/Ltax__c.field-meta.xml
<CustomField>
    <fullName>Ltax__c</fullName>
    <description>Ltax</description>
    <externalDeveloperName>Ltax</externalDeveloperName>
    <label>Ltax</label>
    <precision>14</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>