force-app/main/default/objects/Pedidos_posicionesSet__x/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <description>Make</description>
    <externalDeveloperName>Make</externalDeveloperName>
    <label>Make</label>
    <length>3</length>
    <type>Text</type>
</CustomField>