force-app/main/default/objects/Pedidos_posicionesSet__x/fields/Netpr__c.field-meta.xml
<CustomField>
    <fullName>Netpr__c</fullName>
    <description>Netpr</description>
    <externalDeveloperName>Netpr</externalDeveloperName>
    <label>Netpr</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>