force-app/main/default/objects/Pedidos_posicionesSet__x/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Quantity</description>
    <externalDeveloperName>Quantity</externalDeveloperName>
    <label>Quantity</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>