force-app/main/default/objects/Pedidos_posicionesSet__x/fields/Sqmetres__c.field-meta.xml
<CustomField>
    <fullName>Sqmetres__c</fullName>
    <description>Sqmetres</description>
    <externalDeveloperName>Sqmetres</externalDeveloperName>
    <label>Sqmetres</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>