force-app/main/default/objects/Pedidos_posicionesSet__x/fields/Vrkme__c.field-meta.xml
<CustomField>
    <fullName>Vrkme__c</fullName>
    <description>Vrkme</description>
    <externalDeveloperName>Vrkme</externalDeveloperName>
    <label>Vrkme</label>
    <length>3</length>
    <type>Text</type>
</CustomField>