force-app/main/default/objects/Pedidos_posicionesSet__x/fields/Werks__c.field-meta.xml
<CustomField>
    <fullName>Werks__c</fullName>
    <description>Werks</description>
    <externalDeveloperName>Werks</externalDeveloperName>
    <label>Werks</label>
    <length>4</length>
    <type>Text</type>
</CustomField>